- fixed seperator ignoring the texture pack